# Twenor

./: .gitignore  Cargo.toml  DANK-ca-certificate.crt  MusicVideoGenerator.ipynb  README.md  config.json  dank_db_template.sql  package.json  requirements.txt  vite.config.ts.timestamp-1674838739155.mjs
.github/: FUNDING.yml
api/: Cargo.toml
api/src/: app_state.rs  logging_utils.rs  main.rs
api/src/routes/: audio_routes.rs  correlation_routes.rs  cors_preflight.rs  features_routes.rs  file_routes.rs  index_routes.rs  metadata_routes.rs  mod.rs  scene_config_routes.rs  scenes_routes.rs  state_routes.rs  terms_routes.rs  user_routes.rs
apis/: .gitignore  Cargo.toml  dank_db_template.sql  www.code-workspace
apis/src/: main.rs
apis/src/handlers/: bcrypt_handler.rs  correlation_handler.rs  features_handler.rs  file_handler.rs  jwt_handler.rs  metadata_handler.rs  mod.rs  track_state_handler.rs  user_handler.rs  waveform_handler.rs
apis/src/lib/processing/: Cargo.toml
apis/src/lib/processing/src/: lib.rs
apis/src/models/: correlation.rs  db.rs  features.rs  file_info.rs  metadata.rs  mod.rs  scene.rs  state.rs  track_state.rs  user.rs
apis/src/routes/: correlation_routes.rs  cors_preflight.rs  features_routes.rs  file_routes.rs  metadata_routes.rs  mod.rs  scenes_routes.rs  state_routes.rs  user_routes.rs  waveform_routes.rs
apis/src/utils/: mod.rs  user_utils.rs
classification/: .gitignore  1. How to Generate.ipynb  2. Validate your data.ipynb  3. Train your Model.ipynb  App.py  README.md  Spec.py  Test.py  Testing.ipynb  requirements.txt
classification/img/: image.jfif
classification/src/core/: Analysis.py  Base.py  Computerization.py  Generation.py  Options.py  Prediction.py  Segment.py
classification/styles/: style.css
data/: config.json
defonite/: .gitignore  GameShow.ipynb  animation_generation.py  audio_bpm_detection.py  audio_listener.py  display_animation.py  display_audio_data.py  image_recognition.py  main.py  run.sh  video_generation.py
lib/models/: Cargo.toml
lib/models/src/: audio.rs  audio_buffer.rs  audio_chunk.rs  audio_chunks.rs  audio_correlation.rs  audio_feature_list.rs  audio_features.rs  audio_features_python.rs  audio_file.rs  audio_info.rs  audio_metadata.rs  audio_state.rs  audio_type.rs  audio_view.rs  config.rs  db.rs  lib.rs  prompt_instructions.rs  prompt_response.rs  prompt_scene.rs  prompt_script.rs  user.rs  user_auth_token.rs  user_authenticated.rs  user_credentials.rs  video_scene.rs  video_scene_config.rs  video_scenes.rs  video_script.rs
processing/: Cargo.toml
processing/py/: compute.py
processing/src/: chunk.rs  compute.rs  correlation.rs  db.rs  featutes.rs  logging.rs  main.rs  metadata.rs  prompt.rs  scenes.rs  state.rs  state_manager.rs  track.rs  writing.rs
processing/src/handlers/: handle_chunking.rs  handle_correlation.rs  handle_featutes.rs  handle_loading.rs  handle_metadata.rs  handle_prompt.rs  handle_rendering.rs  handle_scenes.rs  handle_uploading.rs  handle_writing.rs  mod.rs
processing/src/utils/: mod.rs  utils_chunking.rs  utils_correlation.rs  utils_open_ai.rs  utils_python.rs  utils_rendering.rs
src/: Api.tsx  App.scss  App.tsx  Interface.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/lib/log/: Cargo.toml
src-tauri/lib/recordbox/src/: collection.rs  dj.rs  lib.rs  node.rs  playlist.rs  product.rs  track.rs
src-tauri/lib/tauri_audio_stream/src/: lib.rs
src-tauri/lib/twenor/: Cargo.toml
src-tauri/lib/twenor/src/: config.rs  datatypes.rs  lib.rs  listener.rs
src-tauri/lib/twenor_config/: Cargo.toml
src-tauri/lib/twenor_log/src/: lib.rs
src-tauri/lib/twenor_server_api/: Cargo.toml
src-tauri/lib/twenor_tauri_api/: Cargo.toml
src-tauri/lib/twenor_tauri_api/src/: emitter.rs  lib.rs  listener.rs
src-tauri/lib/twenor_tools/: Cargo.toml
src-tauri/lib/twenor_tools/src/: lib.rs
src-tauri/lib/wave_metadata_extractor/src/: image.rs  mp3_metadata.rs
src-tauri/lib/xml_library/: Cargo.toml
src-tauri/lib/xml_library/src/: collection.rs  dj.rs  lib.rs  playlist.rs
src-tauri/src/: main.rs
src/components/: Content.tsx  Explorer.tsx  Sidebar.tsx  Titlebar.tsx
src/styles/: Colors.scss  Content.scss  Explorer.scss  FileSelector.scss  Logo.scss  Page.scss  PageControl.scss  Pages.scss  Sidebar.scss  TitleBar.scss  TrackOverview.scss
src/styles_old/: Explorer.scss  Logo.scss  Titlebar.scss  Welcome.scss
wave/: package.json
wave/data/: config.json
wave/src/: App.scss  Interface.tsx
wave/src-tauri/: library.xml  tauri.conf.json
wave/src-tauri/lib/wave_metadata_extractor/: Cargo.toml
wave/src-tauri/lib/wave_metadata_extractor/src/: musicbrainz.rs
web/: README.md  generate_token_instagram.js  generate_token_spotify.js  mosquitto.conf  mosquitto.start.sh  next.config.js  package.json  react-native.config.js  start.sh  tsconfig.json
web/app/: Home.module.scss  global.css  head.tsx  layout.tsx  page.module.css  page.tsx
web/pb_data/: data.db  logs.db
web/src/: config.jsx  middleware.ts
web/util/: useAudioBuffer.ts  useAudioState.ts  useAudios.ts  useCorrelation.ts  useFeatures.ts  useFile.ts  useFileInformation.ts  useFileUpload.ts  useMusic2Video.ts  useScenes.ts  useUserTerms.ts  useVideo.ts  useVideoMetadata.ts
(+281 files in other folders)
