[package]
name = "api"
version = "0.1.0"
authors = ["Drumnicorn <42@drumni.com>"]
edition = "2021"

[dependencies]
hound = "^3.0"
rodio = "^0.17.0"

samplerate = "^0.2.4"
minimp3 = "^0.5.1"

bcrypt = "^0.15.0"

rocket = "0.4.11"
rocket_cors = "0.5.2"
rocket_contrib = { version = "^0.4.11", features = ["json"] }

serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
jsonwebtoken = "^8.3.0"
chrono = "^0.4.6"

claxon = "^0.4.1"

dotenv = "^0.15.0"

r2d2 = "0.8.9"

log4rs = "^1.0.0"
log = "^0.4.8"

models = { path = "../lib/models" }   
# rocket-include-static-resources = "0.10.3"