[package]
name = "api-drumni"
version = "0.1.0"
authors = ["Drumnicorn <42@drumni.com>"]
edition = "2018"

[dependencies]
mysql = "16.1.0"
r2d2_mysql = "17.0.0"
r2d2 = "0.8.9"

dotenv = "0.15.0"

bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.6"

rocket = "0.4.11"
rocket_cors = "0.5.2"
rocket_codegen = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

sha2 = "0.10.7"
hex = "0.4.3"

hound = "3.4"
rodio = "0.17.1"
minimp3 = "0.5.1"

audiotags = "0.4.1"

[dependencies.processing]
path = "src/lib/processing"

[workspace]
members = [
    "src/lib/processing",
]
