[package]
name = "rust-tauri-react-wave-manager"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "rust-tauri-react-wave-manager"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "<=1.1.1", features = [] }

[dependencies]
tauri = { version = "<=1.1.1", features = ["api-all", "process-command-api"] }
serde = { version = "1.0.83", features = ["derive"] }

log = { path = "./lib/log" }
tauri_audio_stream = { path = "./lib/tauri_audio_stream" }
twenor = { path = "./lib/twenor" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"

[workspace]
members = [
  "./lib/log",
  "./lib/tauri_audio_stream",
  "./lib/twenor",
]
