[package]
name = "models"
version = "0.1.0"
authors = ["Drumnicorn <42@drumni.com>"]
edition = "2021"

[lib]
name = "models"
path = "src/lib.rs"


[dependencies]
r2d2_mysql = "24.0.0"
r2d2 = "0.8.9"

serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
rocket_contrib = { version = "^0.4.11", features = ["json"] }

log = "^0.4.8"
claxon = "^0.4.1"
indicatif = "0.17.6"

jsonwebtoken = "^8.3.0"
chrono = "^0.4.6"
bcrypt = "^0.15.0"

hound = "^3.0"
rodio = "^0.17.0"
samplerate = "^0.2.4"
minimp3 = "^0.5.1"


rocket = "0.4.11"