[package]
name = "twenor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "^1.1.1" }

anyhow = { version = "1.0.57", features = [] }
reqwest = "0.11.12"

serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_with = "2.2.0"
serde_json = "1.0.33"

log = { path = "../log" }
recordbox = { path = "../recordbox" }