[package]
name = "track_metadata_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
mp3-metadata = "0.3.4"
# symphonia = { version = "0.5.1", features = ["mp3", "default"] }

audiotags = "0.4.1"
# musicbrainz_rs = { git = "https://github.com/oknozor/musicbrainz_rs" }
# id3 = "1.3.0"
# lofty = "0.8.0"
# image = "0.24.3"
# structopt = { version = "0.3.26", default-features = false }
# tempfile = "3.3.0"
# iced = { version = "0.4.2", features = ["image", "tokio"] }
